--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "shadcn-ui": "^0.2.3",
+    "sonner": "^1.5.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.2",
